--- a/README.org
+++ b/README.org
@@ -1,17 +1,17 @@
 * jest4s
 
-[Jest](https://github.com/searchbox-io/Jest) client wrapper for scala. With blackjack.
+[[ https://github.com/searchbox-io/jest ][jest]] client wrapper for scala. With blackjack.
 
 
 ** Features
    - Return `scala.concurrent.Future`s
-   - Integrated with [play](https://www.playframework.com/) JSON
+   - Integrated with [[ https://www.playframework.com/ ][play]] JSON
    - Saner default error handling (you don't have to check return values for errors, it will blow up if something goes wrong)
    - No builder pattern galore
    - Reactive streams interface to scroll API (akka streams)
 
 ** Usage
-   See [the spec](https://github.com/ImmobilienScout24/jest4s/blob/master/src/test/scala/de/is24/jest4s/ElasticClientSpec.scala) for sample usage.
+   See [[ https://github.com/ImmobilienScout24/jest4s/blob/master/src/test/scala/de/is24/jest4s/ElasticClientSpec.scala ][the spec]] for sample usage.
 
 
 
